Fix compatibility between Select-to-Speak and large mouse cursor.

The event rewriter needs to allow mouse movement events to pass even
when those events are used by Select-to-Speak. It should only cancel
mouse click events used by Select-to-Speak.

Another solution would be to re-write all used "drag" events to be
simply "move" events, which may reduce the likelyhood that these
events will be used by any other part of Chrome / Chrome OS besides
Select-to-Speak and drawing the mouse.

This bug also impacted some devices (like snappy) even without
large mouse cursor on.

Note: The additional "drag" and "move" events were manually tested
and do not appear to cause any behavior problems on tabs, the
launcher, system windows, etc.

Bug: 818329
Change-Id: I466a15a0f7a5ba0abe4f082a9cfb9b59760d690c
Reviewed-on: https://chromium-review.googlesource.com/947210
Commit-Queue: Katie Dektar <katie@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540714}
Former-commit-id: 8f6ebbb1d897c9ead6e241195f8604b412bb4b17