chrome/browser/chromeos/accessibility/select_to_speak_event_rewriter_unittest.cc
@@ -11,6 +11,7 @@
 #include "ash/test/ash_test_helper.h"
 #include "ash/test/ash_test_views_delegate.h"
 #include "base/macros.h"
+#include "chrome/browser/chromeos/ash_config.h"
 #include "chrome/browser/chromeos/events/event_rewriter_controller.h"
 #include "chrome/browser/ui/aura/accessibility/automation_manager_aura.h"
 #include "chrome/test/base/testing_profile.h"
@@ -178,11 +179,13 @@ TEST_F(SelectToSpeakEventRewriterTest, SearchPlusDrag) {
   generator_->PressLeftButton();
   EXPECT_EQ(click_location, mouse_event_delegate_->last_mouse_event_location());
 
+  // Drags are not blocked.
   gfx::Point drag_location = gfx::Point(120, 32);
   generator_->DragMouseTo(drag_location);
   EXPECT_EQ(drag_location, mouse_event_delegate_->last_mouse_event_location());
   EXPECT_TRUE(mouse_event_delegate_->CapturedMouseEvent(ui::ET_MOUSE_DRAGGED));
-  EXPECT_FALSE(event_capturer_.last_mouse_event());
+  EXPECT_TRUE(event_capturer_.last_mouse_event());
+  event_capturer_.Reset();
 
   generator_->ReleaseLeftButton();
   EXPECT_EQ(drag_location, mouse_event_delegate_->last_mouse_event_location());
@@ -192,6 +195,10 @@ TEST_F(SelectToSpeakEventRewriterTest, SearchPlusDrag) {
 }
 
 TEST_F(SelectToSpeakEventRewriterTest, SearchPlusDragOnLargeDisplay) {
+  // TODO: Failing in mus_unit_tests, see https://crbug.com/818362.
+  if (ash::Shell::GetAshConfig() == ash::Config::MUS) {
+    return;
+  }
   // This display has twice the number of pixels per DIP. THis means that
   // each event coming in in px needs to be divided by two to be converted
   // to DIPs.
@@ -209,7 +216,8 @@ TEST_F(SelectToSpeakEventRewriterTest, SearchPlusDragOnLargeDisplay) {
   EXPECT_EQ(gfx::Point(drag_location_px.x() / 2, drag_location_px.y() / 2),
             mouse_event_delegate_->last_mouse_event_location());
   EXPECT_TRUE(mouse_event_delegate_->CapturedMouseEvent(ui::ET_MOUSE_DRAGGED));
-  EXPECT_FALSE(event_capturer_.last_mouse_event());
+  EXPECT_TRUE(event_capturer_.last_mouse_event());
+  event_capturer_.Reset();
 
   generator_->ReleaseLeftButton();
   EXPECT_EQ(gfx::Point(drag_location_px.x() / 2, drag_location_px.y() / 2),
